fix spacing

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -13,6 +13,7 @@ body > header {
     justify-content: space-between;
     overflow-x: auto;
     padding: 0 1rem;
+    padding-bottom: 1px;
 
     background-color: var(--bg-color);
     color: var(--fg-color);
